--- a/project_parameters_RAW.Config.yaml
+++ b/project_parameters_RAW.Config.yaml
@@ -1,9 +1,9 @@
 # the following parameters are the same across the project and might be needed in more than one module #
-root_dir: "/research/dept/dnb/core_operations/Bioinformatics/achroni/GitHub/sc-atac-seq" # path to the main dir of the project where GitHub repo lives
-data_dir: "/research/dept/dnb/core_operations/Bioinformatics/achroni/GitHub/sc-atac-seq/analyses/cellranger-analysis/results/02_cellranger_count" # path to data dir of the project with CellRanger output results
-metadata_dir: "/research/dept/dnb/core_operations/Bioinformatics/achroni/GitHub/sc-atac-seq/data" # path to metadata dir of the project
+root_dir: "./sc-atac-seq" # path to the main dir of the project where GitHub repo lives
+data_dir: "./sc-atac-seq/analyses/cellranger-analysis/results/02_cellranger_count" # path to data dir of the project with CellRanger output results
+metadata_dir: "./test-dataset" # path to metadata dir of the project
 genome_name: "GRCm39" # define genome reference and versioning
-PROJECT_NAME: "test-dataset"
+PROJECT_NAME: "mouse-test-dataset"
 PI_NAME: "NA"
 TASK_ID: "NA"
 PROJECT_LEAD_NAME: "NA"
@@ -12,7 +12,7 @@ LEAD_ANALYSTS: "Antonia Chroni, PhD"
 GROUP_LEAD: "Cody A. Ramirez, PhD"
 CONTACT_EMAIL: "antonia.chroni@stjude.org"
 PIPELINE: "Standard sc-/sn-ATAC-Seq Analysis in 10X Genomics data"
-START_DATE: "Dec-16-2024"
+START_DATE: "NA"
 COMPLETION_DATE: "ONGOING"
 
 
