--- a/project_parameters.Config.yaml
+++ b/project_parameters.Config.yaml
@@ -1,7 +1,8 @@
 # the following parameters are the same across the project and might be needed in more than one module #
-root_dir: "/sc-atac-seq" # path to the main dir of the project where GitHub repo lives
-data_dir: "/sc-atac-seq/analyses/cellranger-analysis/results/02_cellranger_count/DefaultParameters" # path to data dir of the project with CellRanger output results
-metadata_dir: "/data/project_metadata" # path to metadata dir of the project
+root_dir: "/sc-atac-seq" # Absolute path to the main dir of the project where GitHub repo lives
+data_dir: "/sc-atac-seq/analyses/cellranger-analysis/results/02_cellranger_count/DefaultParameters" # Absolute path to data dir of the project with CellRanger output results. Options: "DefaultParameters", "ForcedCells8000Parameters", or else. 
+metadata_dir: "/data/project_metadata" # Absolute path to metadata dir of the project.
+metadata_file: "project_metadata.tsv" # Options: "project_metadata.tsv" (default) or name as user wants. It needs to be in `tsv` format. It can include one or more samples, as long as it contains at least the following columns in this exact order: `ID`, `SAMPLE`, and `FASTQ`. The `ID` column must contain unique values. Additional metadata columns can be added and arranged as needed by the user (though not required). For samples with multiple technical replicates, list all associated FASTQ file paths in the same row, using commas to separate each path.
 genome_name: "GRCm39" # define genome reference and versioning. Options: (1) human: "GRCh38"; (2) mouse: "GRCm39" and "mm10"; and (3) dual index genomes: "GRCh38ANDGRCm39" and "GRCh38_mm10".
 PROJECT_NAME: "Victoria_Knockout - Testing cohort"
 PI_NAME: "Michael A. Dyer, PhD"
@@ -21,9 +22,15 @@ COMPLETION_DATE: "ONGOING"
 # No need to manually define variables
 
 # `./analyses/cellranger-analysis`
-genome_reference_path: "./reference_genomes/cellranger-sc-atac-seq/2020-A/mus_musculus/mm10/downloads/refdata-cellranger-arc-mm10-2020-A-2.0.0" #path to genome reference to be used for the `cellranger-analysis` module
-cellranger_parameters: "DefaultParameters" # or "ForcedCells8000Parameters" etc
+genome_reference_path: "./reference_genomes/cellranger-sc-atac-seq/2020-A/mus_musculus/mm10/downloads/refdata-cellranger-arc-mm10-2020-A-2.0.0" # Absolute path to genome reference to be used for the `cellranger-analysis` module.
+cellranger_parameters: "DefaultParameters" # Options: "DefaultParameters", "ForcedCells8000Parameters", or else.
 genome_name_cellranger: "GRCm39" #please define the genome of preference for dual genomes. In case for single genomes, please use the same as used for `genome_name`.
-sample_prefix: "DYE"  # define the prefix with the Sample ID used for the samples of the project. This requires that all of the Sample IDs are the same, e.g., DYE001, DYE002, DYE003 and so on.
+# Define the sample ID prefix(es) used in this project.
+# Sample IDs should follow a format like: PREFIX001 (e.g., DYE001, ABC002).
+# You can specify multiple prefixes if your project uses more than one.
+sample_prefix: 
+  - DYE
+  - ABC-
+  - XYZ_
 
 # `./analyses/upstream-analysis`
