--- a/project_parameters.Config.yaml
+++ b/project_parameters.Config.yaml
@@ -142,7 +142,7 @@ module_with_input_data: "cluster-cell-calling" # Options: "cluster-cell-calling"
 input_data_folder_name: "02_create_gene_activity_matrix" # Options: "02_create_gene_activity_matrix" or "03_cluster_cell_calling" if the data are coming from the `cell-contamination-removal-analysis` module
 reduction_value_annotation_module: "umap" # Options: For seurat and harmony use: "umap"; For Liger: "glue::glue("{integration_method}")" or "umapndim30nn30" (for cohorts with a single sample or any other name based on the values used for `num_dim_seurat_qc` and `num_neighbors_seurat_qc`.
 assay_annotation_module: "peaks" # Options: "peaks" (default ALWAYS)
-nfeatures_value_module: 5000 # Options: 5000 (default). This is a QC step for the atac data, filtering out all cells with fewer than 5K total counts in the scATAC-seq data, though you may need to modify this threshold for your experiment.
+nfeatures_value_module: 5000 # Options: 5000 (default). This is a a preprocessing step to identify the most variable genes, which will be used for integration.  You may need to modify the threshold for your experiment.
 ct_palette_file_value: "cell_types_palette.tsv"  # File name with the cell types. It needs to be in `tsv` format. Please ensure cell type names exist and match the ones in the `.figures/palettes/cell_types_palette.tsv`. Alternatively, create a tsv file with your own palette and add it to the `.figures/palettes/` folder. 
 group_by_variable_module: "seq_technology_assay" # Set column name from metadata that indicates the assay used RNA vs ATAC. This will be used for the `01-integration-with-scrna-seq-data.Rmd` in the `co-embedding-cells` process.
 
