Update Readme, YAML and main R script

--- a/project_parameters.Config.yaml
+++ b/project_parameters.Config.yaml
@@ -118,6 +118,8 @@ reference_dir_annotation_module: "./sc-rna-seq-snap/analyses/cell-types-annotati
 reference_file_name_annotation_module: "seurat_obj_cell_types_annotations_all.rds" # File name with the object that contains the cell type annotation. It needs to be in `rds` format.
 celltype_reference_module: "predicted.cell.signature.ident" # Column name from the reference object to be used to transfer labels
 
+n_value_plot_cicero_module: 5 # Number of top links to explore in the `03-finding-co-accessible-networks-cicero.Rmd` script (adjust number as needed). 
+
 # `./analyses/project-updates`
 results_filepath: "./" # Absolute path to the dir where local fork repo lives
 mac_results_filepath: "./" # Absolute path to the dir where local fork repo lives
